--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ sysinfo.txt
 .vs/Chess81 Git/v15/Server/sqlite3/storage.ide-shm
 .vs/Chess81 Git/v15/Server/sqlite3/storage.ide
 .vs/Chess81 Git/v15/Server/sqlite3/db.lock
+.vs/GlobalGameJam/v16/Browse.VC.opendb
+.vs/GlobalGameJam/v16/Browse.VC.db-shm
+.vs/GlobalGameJam/v16/Browse.VC.db
+.vs/GlobalGameJam/v16/Browse.VC.db-wal
